--- a/apps/rsvp_web/web/templates/event/list.html.eex
+++ b/apps/rsvp_web/web/templates/event/list.html.eex
@@ -1,12 +1,7 @@
-<h1>Events</h1>
+<h1> All Events</h1>
+<%= render RsvpWeb.SharedView,  "count.html", list: @events %>
 <div class="list-group">
-<%=for e <- @events do %>
-<a href="events/<%= e.id%>">
-<h3> <%= e.title %> </h3> 
-</a>
-<h2> <%= format_date e.date %> </h2>
-<span> <%= e.description %>  </span>
-
-
+<%= for e <- @events do %>
+    <%= render "summary.html", event: e, conn: @conn %>
 <% end %>
 </div>
